--- a/src/shared/theme.scss
+++ b/src/shared/theme.scss
@@ -1,29 +1,36 @@
-
 * {
-    
-    color:black;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #212121;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans","Helvetica Neue", sans-serif;
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+body {
+  block-size: auto;
+  text-align: left;
+  width: 95%;
 }
 
 header {
-    background: #0D47A1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:2em;
-    color:ivory;
-    font-variant:small-caps;
-    position: fixed;    
-   
+  background: #0d47a1;
+  color: ivory;
 }
 
 h1 {
-    font-size: 1.5em;
-    color:grey;
-    font-variant:small-caps;
-    text-align: center;
+  font-size: 1.5em;
+  color: #616161;
+  font-variant: small-caps;
+  text-align: center;
+  padding: 1em;
+  margin-top: 5%;
+  display: inline-block;
+  width: 100%;
+  left: 50%;
+  height: 5vh;
 }
 
-.mon-bouton-oui{
-    background-color: orangered;
+#mon-bouton-oui {
+  background-color: orangered;
   border-radius: 5px;
   border: none;
   color: white;
@@ -35,3 +42,57 @@ h1 {
   font-size: 15px;
   cursor: pointer;
 }
+.mon-bouton-oui {
+  background-color: orangered;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.nav-wrapper {
+  color: ivory;
+  background-color: #0d47a1;
+  position: fixed;
+}
+
+.material-icons {
+  color: ivory;
+}
+
+.page-footer {
+  background-color: #0d47a1;
+  color: ivory;
+  text-align: left;
+}
+
+[type="submit"] {
+  color: #1b1b1b;
+  font-weight: 750;
+  font-size: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10em; }
+
+button {
+  background-color: #e2f1f8;
+  border-style: solid;
+  border-color: #e2f1f8;
+  border-radius: 5px;
+  border-width: 2px;
+  font-variant: small-caps; }
+
+.btn-circle.btn-lg {
+  background-color: #5e92f3;
+  width: 3.125rem;
+  height: 3.125rem;
+  padding: 0.625rem 1rem;
+  font-size: 1.125rem;
+  line-height: 1.33;
+  border-radius: 1.563rem; }
