--- a/src/preferences/preferences.scss
+++ b/src/preferences/preferences.scss
@@ -7,6 +7,7 @@ font-size: 1em;
 text-align: left;
 line-height: 1.5em;
 list-style-type: none ;
+margin-left: 0.3em;
 }
 
 
@@ -14,5 +15,5 @@ list-style-type: none ;
 .section {
     display:block;
     width:100% ;
-    height:5vh
+    height:5vh;
 }
