--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
-@import '~materialize-css' ;
+@import '~materialize-css';
 @import "~material-design-icons/iconfont/material-icons.css";
 @import "../node_modules/materialize-social/materialize-social.css";
+@import "../node_modules/nouislider/distribute/nouislider.css";
 @import 'shared/theme.scss';
 @import "./preferences/preferences.scss";
 @import "./mabibliotheque/mabibliotheque.scss";
